--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/karim-albakry/repo-migration-tool#readme",
   "dependencies": {
     "bitbucket": "^2.11.0",
+    "chalk": "^5.2.0",
     "express": "^4.18.2",
     "octokit": "^2.0.14",
     "simple-git": "^3.17.0"
