--- a/package.json
+++ b/package.json
@@ -18,20 +18,15 @@
   },
   "homepage": "https://github.com/karim-albakry/repo-migration-tool#readme",
   "dependencies": {
-    "@octokit/rest": "^19.0.7",
+    "axios": "^1.3.5",
     "bitbucket": "^2.11.0",
     "commander": "^10.0.0",
     "dotenv": "^16.0.3",
     "isomorphic-git": "^1.23.0",
     "joi": "^17.9.1",
-    "kleur": "^4.1.5",
-    "node-cache": "^5.1.2",
-    "octokit": "^2.0.14",
-    "regenerator-runtime": "^0.13.11",
-    "simple-git": "^3.17.0"
+    "kleur": "^4.1.5"
   },
   "devDependencies": {
-    "@types/regenerator-runtime": "^0.13.1",
     "chai": "^4.3.7",
     "eslint": "^8.37.0",
     "eslint-config-airbnb-base": "^15.0.0",
