--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "repo-migration-tool",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "parse.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,12 +27,15 @@
     "kleur": "^4.1.5"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.21.4",
     "chai": "^4.3.7",
     "eslint": "^8.37.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "nock": "^13.3.0",
+    "sinon": "^15.0.3"
   }
 }
