--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Repository-Sync",
+  "name": "repository-sync",
   "version": "1.0.0",
   "description": "",
   "main": "src/parse.js",
@@ -9,15 +9,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/karim-albakry/Repository-Sync.git"
+    "url": "git+https://github.com/karim-albakry/repository-sync.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/karim-albakry/Repository-Sync/issues"
+    "url": "https://github.com/karim-albakry/repository-sync/issues"
   },
-  "homepage": "https://github.com/karim-albakry/Repository-Sync#readme",
+  "homepage": "https://github.com/karim-albakry/repository-sync#readme",
   "dependencies": {
     "axios": "^1.3.5",
     "bitbucket": "^2.11.0",
